--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
     <script type="text/javascript" src="cordova.ios.js"></script>
     <script type="text/javascript" src="PushNotification.js"></script>
     <script type="text/javascript" src="JS/index.js"></script>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         app.initialize();
-        </script>
+        </script>-->
     
-    <script>
+    <!--<script>
         $(window).load(function () {
             $('#dvLoading').fadeOut(2000);
         });
-</script>
+</script>-->
     <script type="text/javascript">
-
-
-
         $(document).ready(function () {
+            app.initialize();
             var online = navigator.onLine;    // Detecting the internet connection
             //alert(online);
             if (online) {
