--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link href="Styles/style.css" rel="stylesheet" type="text/css" />
     <!--<script type="text/javascript" src="js/jquery-1.4.2.js"></script>-->
     <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
-    <script type="text/javascript" src="JS/jquery.Storage.js"></script>
-    <script type="text/javascript" src="JS/jquery.jsonp-2.1.3.min.js"></script>
-    <script type="text/javascript" src="cordova.ios.js"></script>
+    <script type="text/javascript" src="js/jquery.Storage.js"></script>
+    <script type="text/javascript" src="js/jquery.jsonp-2.1.3.min.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="PushNotification.js"></script>
-    <script type="text/javascript" src="JS/index.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
-        app.initialize();
+            app.initialize();
         </script>
     
     <script>
