--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             app.initialize();
         </script>
     
-    <script>
+ <!--   <script>
         $(window).load(function () {
             $('#dvLoading').fadeOut(2000);
         });
-</script>
+</script>-->
     <script type="text/javascript">
         $(document).ready(function () {
             var online = navigator.onLine;    // Detecting the internet connection
