--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ initPushwoosh();
             </div>
         </div>
     </div>
-    <div id="dvLoading"></div>
+   <!-- <div id="dvLoading"></div>-->
     <!-- container ends-->
 </body>
 </html>
