--- a/index12.html
+++ b/index12.html
@@ -8,22 +8,19 @@
     <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <script type="text/javascript" src="js/jquery.jsonp-2.1.3.min.js"></script>
-    <script type="text/javascript" src="cordova.ios.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="PushNotification.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
-        app.initialize();
+            app.initialize();
         </script>
     
-   <!-- <script type="text/javascript">
+ <!--   <script>
         $(window).load(function () {
             $('#dvLoading').fadeOut(2000);
         });
 </script>-->
     <script type="text/javascript">
-
-
-
         $(document).ready(function () {
             var online = navigator.onLine;    // Detecting the internet connection
             //alert(online);
@@ -38,35 +35,36 @@
                 $("#txtEmail").val(window.localStorage["username"]);
                 $("#txtPassword").val(window.localStorage["password"]);
                 //alert("button Logged1.");
-initPushwoosh();
-                          alert("registered....");
+                initPushwoosh();
+                alert("registered....");
                 handleLogin();
                 //alert("button Logged2.");
                 UserLogin(); LoginBusinessAdmin();
                 LoginBackOfficeUser();
                 //$('#dvLoading').fadeOut(2000);
-//                alert("All Methods Called");
-//                var type = getUrlVars()["type"];
-//                alert("Query String Type: " + type);
-//                var schoolId = getUrlVars()["schoolId"];
-//                alert("Query String SchoolId: " + schoolId);
-//                if (type != '' && type != undefined) {
-//                    alert("Entered if: " + type);
-//                    if (type == 'News') {
-//                        window.location.href = "news.html?value=" + schoolId + "&userId=0&username=Admin";
-//                    }
-//                    else if (type == 'Calender') {
-//                        window.location.href = "calendar.html?value=" + schoolId + "&userId=0&username=Admin";
-//                    }
-//                    else if (type == 'Resource') {
-//                        window.location.href = "resources.html?value=" + schoolId + "&userId=0&username=Admin";
-//                    }
-//                }
+                //                alert("All Methods Called");
+                //                var type = getUrlVars()["type"];
+                //                alert("Query String Type: " + type);
+                //                var schoolId = getUrlVars()["schoolId"];
+                //                alert("Query String SchoolId: " + schoolId);
+                //                if (type != '' && type != undefined) {
+                //                    alert("Entered if: " + type);
+                //                    if (type == 'News') {
+                //                        window.location.href = "news.html?value=" + schoolId + "&userId=0&username=Admin";
+                //                    }
+                //                    else if (type == 'Calender') {
+                //                        window.location.href = "calendar.html?value=" + schoolId + "&userId=0&username=Admin";
+                //                    }
+                //                    else if (type == 'Resource') {
+                //                        window.location.href = "resources.html?value=" + schoolId + "&userId=0&username=Admin";
+                //                    }
+                //                }
 
 
             }
             $("#submit").click(function () {
-                 initPushwoosh();              
+                alert("Submit Press");
+                initPushwoosh();              
                 //alert("button clicked1.");
                 handleLogin();
                 //alert("button clicked2.");
@@ -102,8 +100,8 @@ initPushwoosh();
                             var username = prod.FirstName + " " + prod.LastName;
                             $.ajax({
                                 type: "POST",
-                                //url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchools_SchoolCodeWise",
-                                url: "Webservice.asmx/GetSchools_SchoolCodeWise",
+                                url: "http://projectxmobile.2bvision.com/Webservice.asmx/GetSchools_SchoolCodeWise",
+                                //url: "Webservice.asmx/GetSchools_SchoolCodeWise",
                                 data: "{'strSchoolCode': '" + prod.SchoolCode + "'}",
                                 contentType: "application/json; charset=utf-8",
                                 dataType: "json",
