--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <script type="text/javascript" src="js/jquery.jsonp-2.1.3.min.js"></script>
-    <script type="text/javascript" src="cordova.ios.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="PushNotification.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
-        app.initialize();
+       // app.initialize();
         </script>
     
    <!-- <script type="text/javascript">
