--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 $("#txtEmail").val(window.localStorage["username"]);
                 $("#txtPassword").val(window.localStorage["password"]);
                 //alert("button Logged1.");
-initPushwoosh();
+//initPushwoosh();
                           alert("registered....");
                 handleLogin();
                 //alert("button Logged2.");
@@ -66,7 +66,7 @@ initPushwoosh();
 
             }
             $("#submit").click(function () {
-                 initPushwoosh();              
+                 //initPushwoosh();              
                 //alert("button clicked1.");
                 handleLogin();
                 //alert("button clicked2.");
