--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--<script type="text/javascript" src="PushNotification.js"></script>-->
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
-       // app.initialize();
+        app.initialize();
         </script>
     
    <!-- <script type="text/javascript">
@@ -38,7 +38,7 @@
                 $("#txtEmail").val(window.localStorage["username"]);
                 $("#txtPassword").val(window.localStorage["password"]);
                 //alert("button Logged1.");
-//initPushwoosh();
+                initPushwoosh();
                           alert("registered....");
                 handleLogin();
                 //alert("button Logged2.");
@@ -66,7 +66,7 @@
 
             }
             $("#submit").click(function () {
-                 //initPushwoosh();              
+                 initPushwoosh();              
                 //alert("button clicked1.");
                 handleLogin();
                 //alert("button clicked2.");
