--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 $("#txtPassword").val(window.localStorage["password"]);
                 //alert("button Logged1.");
                 initPushwoosh();
-                          alert("registered....");
+                alert("registered....");
                 handleLogin();
                 //alert("button Logged2.");
-                UserLogin(); LoginBusinessAdmin();
+                UserLogin(); 
+                LoginBusinessAdmin();
                 LoginBackOfficeUser();
                 //$('#dvLoading').fadeOut(2000);
 //                alert("All Methods Called");
