--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!-- <script type="text/javascript" src="PushNotification.js"></script>-->
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
-        app.initialize();
+       // app.initialize();
         </script>
     
    <!-- <script type="text/javascript">
