--- a/ataglance.html
+++ b/ataglance.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <!--<script type="text/javascript" src="js/jquery-1.4.2.js"></script>-->
-    <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
-    <script src="JS/json2.js" type="text/javascript"></script>
+    <script src="js/json2.js" type="text/javascript"></script>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <title>Home</title>
     <!-- toggle menu -->
