--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <script type="text/javascript" src="../../../../k2pmobile with footer(7-5-2013)/k2p19-2-13//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <link href="Styles/style.css" rel="stylesheet" type="text/css" />
     <!--<script type="text/javascript" src="js/jquery-1.4.2.js"></script>-->
-    <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <script type="text/javascript" src="js/jquery.jsonp-2.1.3.min.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
-   <!-- <script type="text/javascript" src="PushNotification.js"></script>-->
+    <script type="text/javascript" src="PushNotification.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
-       // app.initialize();
+        app.initialize();
         </script>
     
    <!-- <script type="text/javascript">
