--- a/mydetail.html
+++ b/mydetail.html
@@ -4,7 +4,7 @@
     <title>My Detail</title>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
-    <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <!-- toggle menu -->
     <script type="text/javascript">
