--- a/resources.html
+++ b/resources.html
@@ -6,8 +6,8 @@
      <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
   <!--  <script src="js/phonegap-1.4.1.js" type="text/javascript"></script>-->
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
-    <script src="JS/json2.js" type="text/javascript"></script>
-    <script src="JS/date.format.js" type="text/javascript"></script>
+    <script src="js/json2.js" type="text/javascript"></script>
+    <script src="js/date.format.js" type="text/javascript"></script>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     
     <title>Resources</title>
