--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         $(document).ready(function () {
             var online = navigator.onLine;    // Detecting the internet connection
-            alert(online);
+            //alert(online);
             if (online) {
                 // do your stuff
             } else {
@@ -38,13 +38,14 @@
                 $("#txtEmail").val(window.localStorage["username"]);
                 $("#txtPassword").val(window.localStorage["password"]);
                 //alert("button Logged1.");
-                initPushwoosh();
-                alert("registered....");
+                
+                //alert("registered....");
                 handleLogin();
                 //alert("button Logged2.");
                 UserLogin(); 
                 LoginBusinessAdmin();
                 LoginBackOfficeUser();
+                initPushwoosh();
                 //$('#dvLoading').fadeOut(2000);
 //                alert("All Methods Called");
 //                var type = getUrlVars()["type"];
@@ -68,7 +69,7 @@
             }
             $("#submit").click(function () {
                  initPushwoosh();              
-                alert("button clicked1.");
+                //alert("button clicked1.");
                 handleLogin();
                 //alert("button clicked2.");
                 UserLogin();
