--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
-    <script src="js/json2.js" type="text/javascript"></script>
+    <script src="JS/json2.js" type="text/javascript"></script>
     <script src="js/lightbox.js" type="text/javascript"></script>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
@@ -66,6 +66,10 @@
             $("#lnkResources").attr("href", "resources.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkShare").attr("href", "share.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkChangeSchool").attr("href", "changeschool.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
+             $("#lnkLogout").click(function () {
+                //alert("yes");
+                localStorage.clear();
+            })
             $("#lnkLogout").attr("href", "index.html");
         }
 
@@ -104,7 +108,8 @@
                     var Kewords = {};
                     Kewords = response.d;
                     for (i = 0; i < Kewords.length; i++) {
-                        document.getElementById("ulImggallery").innerHTML += "<li><a href='http://projectx.2bvision.com/Gallery/" + Kewords[i].GalleryFileName + "' rel='lightbox[plants]' title='"+ Kewords[i].GalleryFileName +"'><img src=http://projectx.2bvision.com/Gallery/" + Kewords[i].GalleryFileName + " width='180px' height='150px' /></a><br/><div style='margin-left: 5%;'>" + Kewords[i].GalleryFileName + "</div></li>";
+                        //document.getElementById("ulImggallery").innerHTML += "<li><a href='http://projectx.2bvision.com/Gallery/" + Kewords[i].GalleryFileName + "' rel='lightbox[plants]' title='"+ Kewords[i].GalleryFileName +"'><img src=http://projectx.2bvision.com/Gallery/" + Kewords[i].GalleryFileName + " width='180px' height='150px' /></a><br/><div style='margin-left: 5%;'>" + Kewords[i].GalleryFileName + "</div></li>";
+                        document.getElementById("ulImggallery").innerHTML += "<li><a href='http://projectx.2bvision.com/Gallery/" + querystringGallery + "/" + Kewords[i].GalleryFileName + "' rel='lightbox[plants]' title='" + Kewords[i].GalleryFileName + "'><img src=http://projectx.2bvision.com/Gallery/" + querystringGallery + "/" + Kewords[i].GalleryFileName + " width='180px' height='150px' /></a><br/><div style='margin-left: 5%;'>" + Kewords[i].GalleryFileName + "</div></li>";
                     }
 
                 },
