--- a/news.html
+++ b/news.html
@@ -4,8 +4,8 @@
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
-    <script src="js/json2.js" type="text/javascript"></script>
-    <script src="js/date.format.js" type="text/javascript"></script>
+    <script src="JS/json2.js" type="text/javascript"></script>
+    <script src="JS/date.format.js" type="text/javascript"></script>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <title>News</title>
     <!-- toggle menu -->
@@ -66,6 +66,10 @@
             $("#lnkResources").attr("href", "resources.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkShare").attr("href", "share.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkChangeSchool").attr("href", "changeschool.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
+             $("#lnkLogout").click(function () {
+                //alert("yes");
+                localStorage.clear();
+            })
             $("#lnkLogout").attr("href", "index.html");
         }
 
@@ -73,8 +77,8 @@
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-                 //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
-                 url: 'WebService.asmx/GetSchool_SchoolIdWise',
+                 url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
+                 //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
                 data: JSON.stringify(Paramdata),
                 contentType: "application/json; charset=utf-8",
@@ -97,8 +101,8 @@
             var schooluserid = getUrlVars()["userId"];
             //alert(schooluserid);
             $.ajax({
-                url: 'WebService.asmx/GetNews_NewsSchoolUserIdWise',
-                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsSchoolUserIdWise',
+                //url: 'WebService.asmx/GetNews_NewsSchoolUserIdWise',
+                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsSchoolUserIdWise',
                 type: 'POST',
                 data: "{'SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
                 contentType: "application/json; charset=utf-8",
@@ -125,8 +129,8 @@
             var schooluserid = getUrlVars()["userId"];
             //alert(schooluserid);
             $.ajax({
-                url: 'WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
-                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
+                //url: 'WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
+                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
                 type: 'POST',
                 data: "{'intChannelId': '" + channelId + "','SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
                 contentType: "application/json; charset=utf-8",
@@ -151,8 +155,8 @@
             var schoolid = getUrlVars()["value"];
             var schooluserid = getUrlVars()["userId"];
             $.ajax({
-                url: 'WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
-                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
+                //url: 'WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
+                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
                 type: 'POST',
                 data: "{'SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
                 contentType: "application/json; charset=utf-8",
@@ -184,6 +188,7 @@
             });
             //alert("Get Functions");
             GetFunctions();
+             
         });
 
         function GetUsername() {
@@ -277,12 +282,12 @@
             </ul>
         </div>
         <div class="detail-area">
-            <h3 style="margin: 10px auto 0 auto;color:#cc0000;">
+            <h3 style="margin: 10px auto 0 auto;color:#000000;">
                 News
             </h3>
             <div class="marginChannel">
                 <select id="ddlChannels">
-                    <option value="0">Select Channel</option>
+                    <option value="0">Select Category</option>
                 </select></div>
             <div class="overflowOneDiv">
                 <dl class="dlist" id="dlNews">
