--- a/newsdetail.html
+++ b/newsdetail.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <!--<script type="text/javascript" src="js/jquery-1.4.2.js"></script>-->
+    <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <script src="JS/json2.js" type="text/javascript"></script>
-    <script src="js/date.format.js" type="text/javascript"></script>
+    <script src="JS/date.format.js" type="text/javascript"></script>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
-    <title>Home</title>
+    <title>News</title>
     <!-- toggle menu -->
     <script type="text/javascript">
         $(function () {
@@ -25,7 +25,6 @@
                     options = { to: { width: 200, height: 60} };
                 }
                 // run the effect
-                //$("#effect").toggle(selectedEffect, options, 300);
                 $("#effect").toggle("slow");
             };
 
@@ -38,53 +37,6 @@
     </script>
     <!-- toggle menu ends -->
     <script type="text/javascript">
-
-        //        function GetKeywordArticles() {
-
-        //            $.ajax({
-        //                url: 'http://projectX.2bvision.com/projectx/WebCommunicator/WebService.asmx/GetAllSchools',
-        //                type: 'POST',
-        //                data: {},
-        //                contentType: "application/json; charset=utf-8",
-        //                dataType: "json",
-        //                success: function (response) {
-        //                    var Kewords = {};
-        //                    Kewords = response.d;
-        //                    document.getElementById("ddlGetSchools").options.length = 0;
-        //                    document.getElementById("ddlGetSchools").options[0] = new Option('Select a school');
-        //                    for (i = 0; i < Kewords.length; i++) {
-        //                        document.getElementById("ddlGetSchools").options[i + 1] = new Option(Kewords[i].SchoolName);
-        //                        document.getElementById("ddlGetSchools").options[i + 1].value = Kewords[i].SchoolId;
-        //                    }
-        //                },
-        //                failure: function (errMsg) {
-        //                    $('#errorMessage').text(errMsg); //errorMessage is id of the div
-        //                }
-        //            });
-        //        }
-
-        $(document).ready(function () {
-            //        var sch= getUrlVars()["userId"];
-            //        alert("SCHOOL USER ID ARS:" + a);
-            //        var b = getUrlVars()["username"];
-            //        alert("SCHOOL USER NAME Without Space:" + b);
-            //        var c=b.replace("%20"," ");
-            //        alert("SCHOOL USER NAME With Space:" + c);
-            //            var schoolId = getUrlVars()["value"];
-            //            if (schoolId == undefined) {
-            //                window.location.href = 'login.htm';
-            //            }
-            //alert("Assigning Links");
-            assignLinks();
-            //var a = $.Storage.get("SchoolUserId");
-            //alert("Get News");
-            GetNews();
-            //alert("Get Calender");
-            GetCalender();
-            //alert("Perfect");
-            GetUsername();
-            GetSchoolInfo();
-        });
 
         function getUrlVars() {
             var vars = [], hash;
@@ -114,95 +66,19 @@
             $("#lnkResources").attr("href", "resources.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkShare").attr("href", "share.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkChangeSchool").attr("href", "changeschool.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
-            $("#lnkLogout").click(function () {
+             $("#lnkLogout").click(function () {
                 //alert("yes");
                 localStorage.clear();
             })
             $("#lnkLogout").attr("href", "index.html");
         }
 
-        function GetUsername() {
-            var usernamewithoutspace = getUrlVars()["username"];
-            var username = usernamewithoutspace.replace("%20", " ");
-            $("#divUsername").append("" + username + "");
-        }
-
-        function GetNews() {
-            var schoolid = getUrlVars()["value"];
-            var schooluserid = getUrlVars()["userId"];
-            if (schooluserid == "undefined") {
-                schooluserid = "0";
-            }
-            var username = getUrlVars()["username"];
-            //alert(schooluserid);
-            $.ajax({
-                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsSchoolUserIdWise',
-                //url: 'WebService.asmx/GetNews_NewsSchoolUserIdWise',
-                type: 'POST',
-                data: "{'SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: function (response) {
-                    //alert("success News");
-                    var Kewords = {};
-                    Kewords = response.d;
-                    for (i = 0; i < Kewords.length; i++) {
-                        //alert("SuccessFull Operation");
-                        var date = new Date(parseInt(Kewords[i].CreatedDate.substr(6)));
-                        var createdDate = [date.getDate(), date.getMonth() + 1, date.getFullYear()].join('/');
-                        document.getElementById("dlNews").innerHTML += "<dt><a style='color:#737373;text-decoration:none;' href='newsdetail.html?value=" + schoolid + "&userId=" + schooluserid + "&username=" + username + "&newsId=" + Kewords[i].NewsId + "'>" + Kewords[i].NewsHeading + "</a></dt><dd></dd>";
-                    }
-
-                },
-                failure: function (errMsg) {
-                    $('#errorMessage').text(errMsg); //errorMessage is id of the div 
-                }
-            });
-        }
-
-        function GetCalender() {
-            var schoolid = getUrlVars()["value"];
-            var schooluserid = getUrlVars()["userId"];
-            if (schooluserid == "undefined") {
-                schooluserid = "0";
-            }
-            var username = getUrlVars()["username"];
-            $.ajax({
-                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
-                //url: 'WebService.asmx/GetCalendar_SchoolIdSchoolUserIdWise',
-                type: 'POST',
-                data: "{'SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                success: function (response) {
-                    var Kewords = {};
-                    Kewords = response.d;
-                    for (i = 0; i < Kewords.length; i++) {
-                       // var date = new Date(parseInt(Kewords[i].CreatedDate.substr(6)));
-                      //  var createdDate = [date.getDate(), date.getMonth() + 1, date.getFullYear()].join('/');
-                      //  var ddText = Kewords[i].ChannelName + ' > Updated on ' + createdDate + ' by Admin';
-                      
-                          var milli = '';
-                        milli = Kewords[i].EventStartDate.replace(/\/Date\((-?\d+)\)\//, '$1');
-                        var date1 = new Date(parseInt(milli)).format("HH:mm TT mmm dd,yyyy");
-                        var str= date1 + ", " + Kewords[i].EventLocation;
-                       // alert(str);
-                        document.getElementById("dlCalender").innerHTML += "<dt><a style='color:#737373;text-decoration:none;' href='calendardetail.html?value=" + schoolid + "&userId=" + schooluserid + "&username=" + username + "&calendarId=" + Kewords[i].CalendarId + "'>" + Kewords[i].CalendarEventTitle + "</a></dt><dd><a style='color:#737373;text-decoration:none;' href='calendardetail.html?value=" + schoolid + "&userId=" + schooluserid + "&username=" + username + "&calendarId=" + Kewords[i].CalendarId + "'>" + str + "</a></dd>";
-                    }
-
-                },
-                failure: function (errMsg) {
-                    $('#errorMessage').text(errMsg); //errorMessage is id of the div 
-                }
-            });
-        }
-
         var querystring = getUrlVars()["value"];
         Paramdata = { "SchoolId": querystring }
         function GetSchoolInfo() {
             $.ajax({
-                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
-                //url: 'WebService.asmx/GetSchool_SchoolIdWise',
+                 url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetSchool_SchoolIdWise',
+                 //url: 'WebService.asmx/GetSchool_SchoolIdWise',
                 type: 'POST',
                 data: JSON.stringify(Paramdata),
                 contentType: "application/json; charset=utf-8",
@@ -218,6 +94,127 @@
                 }
             });
         }
+
+        function GetNews() {
+            var schoolid = getUrlVars()["value"];
+            //alert(schoolid);
+            var newsid = getUrlVars()["newsId"];
+            //alert(schooluserid);
+            $.ajax({
+                //url: 'WebService.asmx/GetNews_NewsIdWise',
+                url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsIdWise',
+                type: 'POST',
+                data: "{'intNewsId': '" + newsid + "'}",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    //alert("success News");
+                    var Kewords = {};
+                    Kewords = response.d;
+                    for (i = 0; i < Kewords.length; i++) {
+                        document.getElementById("dlNews").innerHTML += "<dt>" + Kewords[i].NewsHeading + "</dt><dd>" + Kewords[i].NewsDescription + "</dd>";
+                    }
+
+                },
+                failure: function (errMsg) {
+                    $('#errorMessage').text(errMsg); //errorMessage is id of the div 
+                }
+            });
+        }
+
+        function GetNewsChannelWise(channelId) {
+            //alert("Channel ID in Function"+channelId);
+            var schoolid = getUrlVars()["value"];
+            //alert(schoolid);
+            var schooluserid = getUrlVars()["userId"];
+            //alert(schooluserid);
+            $.ajax({
+                url: 'WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
+                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetNews_NewsChannelSchoolUserIdWise',
+                type: 'POST',
+                data: "{'intChannelId': '" + channelId + "','SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    //alert("success News");
+                    var Kewords = {};
+                    Kewords = response.d;
+                    document.getElementById("dlNews").innerHTML = "";
+                    for (i = 0; i < Kewords.length; i++) {
+                        document.getElementById("dlNews").innerHTML += "<dt>" + Kewords[i].NewsHeading + "</dt><dd>" + Kewords[i].NewsDescription + "</dd>";
+                    }
+
+                },
+                failure: function (errMsg) {
+                    $('#errorMessage').text(errMsg); //errorMessage is id of the div 
+                }
+            });
+        }
+
+        function GetChannels() {
+            var schoolid = getUrlVars()["value"];
+            var schooluserid = getUrlVars()["userId"];
+            $.ajax({
+                url: 'WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
+                //url: 'http://projectxmobile.2bvision.com/WebService.asmx/GetUserActiveChannels_SchoolIdSchoolUserIdWise',
+                type: 'POST',
+                data: "{'SchoolId': '" + schoolid + "','SchoolUserId':'" + schooluserid + "'}",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    //alert("Success Channels");
+                    var Kewords = {};
+                    Kewords = response.d;
+                    for (i = 0; i < Kewords.length; i++) {
+                        //document.getElementById("dlNews").innerHTML += "<dt>" + Kewords[i].NewsHeading + "</dt><dd>" + Kewords[i].NewsDescription + "</dd>";
+                        $("#ddlChannels").append("<option value='" + Kewords[i].ChannelId + "'>" + Kewords[i].ChannelName + "</option>");
+                    }
+
+                },
+                failure: function (errMsg) {
+                    $('#errorMessage').text(errMsg); //errorMessage is id of the div GetUserActiveChannels_SchoolIdSchoolUserIdWise
+                }
+            });
+        }
+
+        $(document).ready(function () {
+            //alert("Assigning Links");
+            assignLinks();
+            $('#ddlChannels').change(function () {
+                var channelId = $('#ddlChannels').val();
+                if (channelId !== "0") {
+                    GetNewsChannelWise(channelId);
+                }
+            });
+            //alert("Get Functions");
+            GetFunctions();
+             $('#btnBack').click(function () {
+                //alert("yes");
+                var schoolid = getUrlVars()["value"];
+                //alert(schoolid);
+                var schooluserid = getUrlVars()["userId"];
+                var username = getUrlVars()["username"];
+               // alert(username);
+               window.location = "ataglance.html?value=" + schoolid + "&userId=" + schooluserid + "&username=" + username + "";
+            });
+        });
+
+        function GetUsername() {
+            var usernamewithoutspace = getUrlVars()["username"];
+            var username = usernamewithoutspace.replace("%20", " ");
+            $("#divUsername").append("" + username + "");
+        }
+
+        function GetFunctions() {
+            GetSchoolInfo();
+            //alert("Get News");
+            GetNews();
+            //alert("Get Channels");
+            //GetChannels();
+            GetUsername();
+            //alert("Perfect");
+        }
+      
     </script>
 </head>
 <body>
@@ -243,14 +240,14 @@
         </a>
         <div class="School-name" id="divTagLine">
             </div>
-        <div class="nav" id="effect" style="display: none;">
+        <div class="nav" id="effect" style="display:none;">
             <ul class="main-nav">
-                <li><a id="lnkAtAGlance" class="active">
+                <li><a id="lnkAtAGlance">
                     <img src="images/at-a-glane.png" width="35" height="30" alt="" />
                     <p class="marginP">
                         At a Glance</p>
                 </a></li>
-                <li><a id="lnkNews">
+                <li><a id="lnkNews" class="active">
                     <img src="images/nes-icon.png" width="35" height="30" alt="" />
                     <p class="marginP">
                         News</p>
@@ -292,17 +289,19 @@
                 </a></li>
             </ul>
         </div>
+         <div style="float:right;margin-right:10px; margin-top:-30px">
+            <input type="image" src="images/arrows_back_forward.png" id="btnBack" width="45" />
+        </div>
         <div class="detail-area">
-            <h3 style="margin: 25px auto 0 auto;color:#000000;">
-                News</h3>
-            <div class="overflowTwoDivs">
-                <dl class="dlist" id="dlNews">
-                </dl>
-            </div>
             <h3 style="margin: 10px auto 0 auto;color:#000000;">
-                Calender</h3>
-            <div class="overflowTwoDivs">
-                <dl class="dlist" id="dlCalender">
+                News Details
+            </h3>
+            <div class="marginChannel" style="display:none;">
+                <select id="ddlChannels">
+                    <option value="0">Select Channel</option>
+                </select></div>
+            <div class="overflowOneDiv">
+                <dl class="dlist" id="dlNews">
                 </dl>
             </div>
         </div>
