--- a/resources.html
+++ b/resources.html
@@ -3,11 +3,11 @@
 <head>
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
     <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
-     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-  <!--  <script src="js/phonegap-1.4.1.js" type="text/javascript"></script>-->
+     <script type="text/javascript" charset="utf-8" src="cordova-2.7.0.js"></script>
+    <script src="js/phonegap-1.4.1.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
-    <script src="js/json2.js" type="text/javascript"></script>
-    <script src="js/date.format.js" type="text/javascript"></script>
+    <script src="JS/json2.js" type="text/javascript"></script>
+    <script src="JS/date.format.js" type="text/javascript"></script>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     
     <title>Resources</title>
@@ -78,6 +78,10 @@
             $("#lnkResources").attr("href", "resources.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkShare").attr("href", "share.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkChangeSchool").attr("href", "changeschool.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
+             $("#lnkLogout").click(function () {
+                //alert("yes");
+                localStorage.clear();
+            })
             $("#lnkLogout").attr("href", "index.html");
         }
 
