--- a/share.html
+++ b/share.html
@@ -4,7 +4,7 @@
     <title>Share</title>
     <link href="Styles/MobileAppStyle.css" rel="stylesheet" type="text/css" />
     <!--<script src="JS/jquery-1.4.2.min.js" type="text/javascript"></script>-->
-    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="JS/jquery-1.8.3.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/jquery.Storage.js"></script>
     <!-- toggle menu -->
     <script type="text/javascript">
@@ -28,6 +28,7 @@
 
             // set effect from select menu value
             $("#button").click(function () {
+               alert("button");
                 runEffect();
                 return false;
             });
@@ -47,6 +48,7 @@
         }
 
         function assignLinks() {
+
             var schoolId = getUrlVars()["value"];
             var schooluserid = getUrlVars()["userId"];
             if (schooluserid == "undefined") {
@@ -63,6 +65,10 @@
             $("#lnkResources").attr("href", "resources.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkShare").attr("href", "share.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
             $("#lnkChangeSchool").attr("href", "changeschool.html?value=" + schoolId + "&userId=" + schooluserid + "&username=" + username + "");
+             $("#lnkLogout").click(function () {
+                //alert("yes");
+                localStorage.clear();
+            })
             $("#lnkLogout").attr("href", "index.html");
         }
 
@@ -95,6 +101,7 @@
         }
 
         $(document).ready(function () {
+            alert("ready");
             assignLinks();
             GetUsername();
             GetSchoolInfo();
