--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             //alert('aaaojeeee aaaojeeee');
             //alert("button clicked.");
             //alert($('#txtEmail').val());
-            $("divLoading").fadeIn(400);
-            $("divLoading").fadeOut(2000);
+            //$("divLoading").fadeIn(400);
+            //$("divLoading").fadeOut(2000);
             registerPushwoosh($('#txtEmail').val());
             handleLogin();  
             UserLogin();
