--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             //var form = $("#loginForm");
             if (window.localStorage["username"] != 'undefined' && window.localStorage["password"] != 'undefined' && window.localStorage["username"] != '' && window.localStorage["password"] != '' && window.localStorage["username"] != null && window.localStorage["password"]!=null) {
               //  alert("local");
-                 $("#dvLoading").fadeIn(400);
+                 //$("#dvLoading").fadeIn(400);
                 // $("#dvLoading").fadeIn(2000);
                 $("#txtEmail").val(window.localStorage["username"]);
                 $("#txtPassword").val(window.localStorage["password"]);
